Add logs on Calculator Worker Add task interval in settings

--- a/SwtorOptimizer.Calculator/appsettings.Development.json
+++ b/SwtorOptimizer.Calculator/appsettings.Development.json
@@ -2,6 +2,9 @@
   "DatabaseSettings": {
     "ConnectionString": "Server=(local), 1433;Database=SwtorOptimizer;User Id=sa;Password=P@ssw0rd;"
   },
+  "CalculatorSettings": {
+    "TaskInterval": 60
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
