--- a/SwtorOptimizer.Calculator/appsettings.Production.json
+++ b/SwtorOptimizer.Calculator/appsettings.Production.json
@@ -2,6 +2,9 @@
   "DatabaseSettings": {
     "ConnectionString": "Server=#DBSERVER#;Database=#DBNAME#;User Id=#DBUSER#;Password=#DBPASSWORD#;"
   },
+  "CalculatorSettings": {
+    "TaskInterval": 60
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
