--- a/SwtorOptimizer/SwtorOptimizer.csproj
+++ b/SwtorOptimizer/SwtorOptimizer.csproj
@@ -42,6 +42,7 @@
     <None Remove="ClientApp\src\app\models\IEnhancement.ts" />
     <None Remove="ClientApp\src\app\models\IEnhancementSet.ts" />
     <None Remove="ClientApp\src\app\models\IFindCombinationTask.ts" />
+    <None Remove="ClientApp\src\app\models\IResultObject.ts" />
     <None Remove="ClientApp\src\app\models\IThresholdData.ts" />
     <None Remove="ClientApp\src\app\services\enhancement-sets.service.ts" />
     <None Remove="ClientApp\src\app\services\find-combinations-tasks.service.ts" />
@@ -60,6 +61,7 @@
     </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\models\IEnhancementSet.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\IFindCombinationTask.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\IResultObject.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\IThresholdData.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\enhancement-sets.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\find-combinations-tasks.service.ts" />
