--- a/SwtorOptimizer.Calculator/SwtorOptimizer.Calculator.csproj
+++ b/SwtorOptimizer.Calculator/SwtorOptimizer.Calculator.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
