--- a/SwtorOptimizer.Calculator/SwtorOptimizer.Calculator.csproj
+++ b/SwtorOptimizer.Calculator/SwtorOptimizer.Calculator.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
