--- a/SwtorOptimizer/SwtorOptimizer.csproj
+++ b/SwtorOptimizer/SwtorOptimizer.csproj
@@ -43,6 +43,7 @@
     <None Remove="ClientApp\src\app\models\IEnhancement.ts" />
     <None Remove="ClientApp\src\app\models\IEnhancementSet.ts" />
     <None Remove="ClientApp\src\app\models\IFindCombinationTask.ts" />
+    <None Remove="ClientApp\src\app\models\IFindCombinationTaskFront.ts" />
     <None Remove="ClientApp\src\app\models\IResultObject.ts" />
     <None Remove="ClientApp\src\app\models\IThresholdData.ts" />
     <None Remove="ClientApp\src\app\services\app.service.ts" />
@@ -63,6 +64,7 @@
     </TypeScriptCompile>
     <TypeScriptCompile Include="ClientApp\src\app\models\IEnhancementSet.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\IFindCombinationTask.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\IFindCombinationTaskFront.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\IResultObject.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\IThresholdData.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\app.service.ts" />
