--- a/SwtorOptimizer.Business/SwtorOptimizer.Business.csproj
+++ b/SwtorOptimizer.Business/SwtorOptimizer.Business.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
   </PropertyGroup>
 
 </Project>
