--- a/SwtorOptimizer/appsettings.json
+++ b/SwtorOptimizer/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "jwtTokenConfig": {
+    "secret": "1234567890123456789",
+    "issuer": "https://swtoroptimizer.lahan.fr",
+    "audience": "https://swtoroptimizer.lahan.fr",
+    "accessTokenExpiration": 20,
+    "refreshTokenExpiration": 60
+  },
   "AllowedHosts": "*"
 }
