--- a/SwtorOptimizer.Calculator/SwtorOptimizer.Calculator.csproj
+++ b/SwtorOptimizer.Calculator/SwtorOptimizer.Calculator.csproj
@@ -4,8 +4,11 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <AssemblyVersion>1.3.0.0</AssemblyVersion>
-    <FileVersion>1.3.0.0</FileVersion>
+    <AssemblyVersion>1.3.1.0</AssemblyVersion>
+    <FileVersion>1.3.1.0</FileVersion>
+    <Version>1.3.1.0</Version>
+    <Authors>Lowxorx</Authors>
+    <Company>Lahan</Company>
   </PropertyGroup>
 
   <ItemGroup>
