--- a/SwtorOptimizer.Database/SwtorOptimizer.Database.csproj
+++ b/SwtorOptimizer.Database/SwtorOptimizer.Database.csproj
@@ -2,8 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
+    <Version>1.2.0.0</Version>
+    <Authors>Lowxorx</Authors>
+    <Company>Lahan</Company>
   </PropertyGroup>
 
   <ItemGroup>
