--- a/SwtorOptimizer/SwtorOptimizer.csproj
+++ b/SwtorOptimizer/SwtorOptimizer.csproj
@@ -58,17 +58,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\src\app\components\widgets\theme-toggle\theme-toggle.module.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\components\widgets\topbar\topbar.module.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\models\IEnhancement.ts">
-      <SubType>Code</SubType>
-    </TypeScriptCompile>
-    <TypeScriptCompile Include="ClientApp\src\app\models\IEnhancementSet.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\models\IResultObject.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\models\IThresholdData.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\services\app.service.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\services\enhancement-sets.service.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\services\find-combinations-tasks.service.ts" />
+      <TypeScriptCompile Include="ClientApp\src\app\components\widgets\theme-toggle\theme-toggle.module.ts"/>
+      <TypeScriptCompile Include="ClientApp\src\app\components\widgets\topbar\topbar.module.ts"/>
+      <TypeScriptCompile Include="ClientApp\src\app\models\IResultObject.ts"/>
+      <TypeScriptCompile Include="ClientApp\src\app\models\ISetData.ts">
+          <SubType>Code</SubType>
+      </TypeScriptCompile>
+      <TypeScriptCompile Include="ClientApp\src\app\models\IThresholdData.ts"/>
+      <TypeScriptCompile Include="ClientApp\src\app\services\app.service.ts"/>
+      <TypeScriptCompile Include="ClientApp\src\app\services\enhancement-sets.service.ts"/>
+      <TypeScriptCompile Include="ClientApp\src\app\services\find-combinations-tasks.service.ts"/>
   </ItemGroup>
 
   <ItemGroup>
